--- a/style/stylePropio.css
+++ b/style/stylePropio.css
@@ -11,12 +11,13 @@ h1{
     text-align: center;
     position: relative;
     bottom: 60px;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 .logo{
     height: 200px;
     position: sticky;
-   left: 1700px;
-   bottom: 700px;
+    left: 1700px;
+    bottom: 700px;
 }
 h2, h3, p{
     text-align: center;
@@ -30,13 +31,16 @@ nav a{
     margin: 15px;
     position: relative;
     bottom: 200px;
-    text-decoration: none;
+    font-size: large;
+    letter-spacing: -2px;
+    transition: 700ms ease;
+    margin-bottom: 0.8rem;
     color: black;
     
 }
 nav a:hover{
-    color: rgb(0, 0, 0);
-    text-decoration: underline;
+    font-variation-settings: "wght" 582; 
+    letter-spacing: 1px;
 }
 .sitio{
     color: rgb(233, 184, 25);
@@ -51,9 +55,23 @@ section{
     left: 23%;
     background-color: rgb(233, 184, 25);
 }
+@media (max-width: 1250px) {
+    section{
+        bottom: 150px;
+    }
+}
 p > a{
     color: black;
     text-decoration: none;
     font-size: large;
     font-weight: bold;
+}
+li > span{
+    font-weight: bold;
+}
+p > span{
+    font-weight: bold;
+}
+table{
+    width: 100%;
 }
